{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 17,
  "lineage": "a641ae5a-78cd-e629-211b-d87a8d2b5b9e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:network-acl/acl-0006688ed4120606d",
            "default_network_acl_id": "acl-0006688ed4120606d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0006688ed4120606d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "715841327332",
            "subnet_ids": [
              "subnet-07cf25be22b28f682",
              "subnet-0b9889129ca4ad1ea"
            ],
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:route-table/rtb-0588ac6fe14ba5025",
            "default_route_table_id": "rtb-0588ac6fe14ba5025",
            "id": "rtb-0588ac6fe14ba5025",
            "owner_id": "715841327332",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:security-group/sg-0beff18d8e8864d87",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0beff18d8e8864d87",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "715841327332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:internet-gateway/igw-07b5d0bfa5e82848d",
            "id": "igw-07b5d0bfa5e82848d",
            "owner_id": "715841327332",
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07b5d0bfa5e82848d",
            "id": "r-rtb-0bce1c0768e17af0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bce1c0768e17af0a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:route-table/rtb-0c036753552726933",
            "id": "rtb-0c036753552726933",
            "owner_id": "715841327332",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:route-table/rtb-0bce1c0768e17af0a",
            "id": "rtb-0bce1c0768e17af0a",
            "owner_id": "715841327332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b5d0bfa5e82848d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea56a43f54445d0b",
            "route_table_id": "rtb-0c036753552726933",
            "subnet_id": "subnet-0b9889129ca4ad1ea"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086f700806b46caba",
            "route_table_id": "rtb-0bce1c0768e17af0a",
            "subnet_id": "subnet-07cf25be22b28f682"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:subnet/subnet-0b9889129ca4ad1ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9889129ca4ad1ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841327332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:subnet/subnet-07cf25be22b28f682",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cf25be22b28f682",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841327332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            },
            "vpc_id": "vpc-085c3bd6e475293e0"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841327332:vpc/vpc-085c3bd6e475293e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0006688ed4120606d",
            "default_route_table_id": "rtb-0588ac6fe14ba5025",
            "default_security_group_id": "sg-0beff18d8e8864d87",
            "dhcp_options_id": "dopt-04e1bb4daa1d6bb98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085c3bd6e475293e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0588ac6fe14ba5025",
            "owner_id": "715841327332",
            "tags": {
              "Name": "vpc-test-module"
            },
            "tags_all": {
              "Name": "vpc-test-module"
            }
          }
        }
      ]
    }
  ]
}